# C-Practice

./: .gitignore  C-COMPILATION-GUIDE.md  README.md
cube/: CMakeLists.txt  CUBE.md  Makefile  a.out  cube.c  cube_one.c
cube/shape/: CMakeLists.txt  shape.c
minigame/dino/: dino.c
minigame/dino/include/: textures.h
minigame/dino/src/: render.c  sprite.c  terminal.c
minigame/gift/: CMakeLists.txt  mylove.c
minigame/gift/include/: ascii.h  background.h  render.h  scenes.h  textures.h
minigame/gift/src/: background.c  render.c  scenes.c  terminal.c
minigame/gift/src/scenes/: scene_eight.c  scene_five.c  scene_one.c  scene_seven.c  scene_six.c  scene_three.c  scene_two.c  scene_zero.c
minigames/dino/: CMakeLists.txt  DINO.md
minigames/dino/include/: render.h  sprites.h  terminal.h
minigames/dino/src/: background.c
minigames/gift/: CMakeLists.txt  mylove.c
minigames/gift/include/: common.h  sprites.h  textures.h
minigames/gift/src/: background.c  render.c  sprite.c
minigames/gift/src/scenes/: scene_eight.c  scene_four.c  scene_loop.c  scene_seven.c  scene_zero.c
pomodoro/: README.md  pomodoro  pomodoro.c
shape/: shape.h  shapes_config.h
volume/: player_state.mm  volume.mm
